Realign jumbotron in relation to fixed navbar

--- a/bootstrap-custom.css
+++ b/bootstrap-custom.css
@@ -1,12 +1,13 @@
 
 .jumbotron {
     background-image: url(Assets/Jumbotron-img.jpg);
-    background-position: 0% 45%;
+    background-position: 0% 50%;
     background-size: cover;
     background-repeat: no-repeat;
     height: 400px;
     margin-bottom: 0;
     text-align: center;
+    margin-top: 55px;
 }
 
 .vertical-center {
